deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: apps
  name: yngvenot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yngvenot
  template:
    metadata:
      labels:
        app: yngvenot
    spec:
      containers:
      - name: yngvenot
        image: registry.digitalocean.com/olsen/yngvenot:latest
        ports:
        - containerPort: 80
