service.yml
kind: Service
apiVersion: v1
metadata:
  name: yngvenot
  namespace: apps
  labels:
    k8s-app: yngvenot
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    k8s-app: yngvenot
  type: ClusterIP
  ipFamilyPolicy: SingleStack
