ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yngvenot-ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "app.motoren.site"
    http:
      paths:
      - pathType: Prefix
        path: "/yngvenot(/|$)(.*)"
        backend:
          service:
            name: yngvenot
            port:
              number: 80
